support dark theme

--- a/Hosts.Web/wwwroot/index.html
+++ b/Hosts.Web/wwwroot/index.html
@@ -18,6 +18,12 @@
         textarea {
             overflow: auto;
         }
+        @media (prefers-color-scheme: dark) {
+            textarea {
+                background-color: #222;
+                color: #fff;
+            }
+        }
     </style>
 </head>
 <body>
