--- a/Hosts.Web/wwwroot/index.html
+++ b/Hosts.Web/wwwroot/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <form name="hosts">
-        <textarea autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="off"></textarea>
+        <textarea autocomplete="off" autocorrect="off" autocapitalize="none" spellcheck="false"></textarea>
     </form>
     <script>
         /**
